// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`skipWhen > should pass the current result draft to the functional condition 1`] = `
{
  "errorCount": 0,
  "errors": [],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getInfo": [Function],
  "getInfoByGroup": [Function],
  "getMessage": [Function],
  "getSuccesses": [Function],
  "getSuccessesByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasInfo": [Function],
  "hasInfoByGroup": [Function],
  "hasSuccesses": [Function],
  "hasSuccessesByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "info": [],
  "infoCount": 0,
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "pendingCount": 0,
  "successCount": 0,
  "successes": [],
  "testCount": 0,
  "tests": {},
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`skipWhen > should pass the current result draft to the functional condition 2`] = `
{
  "errorCount": 1,
  "errors": [
    SummaryFailure {
      "fieldName": "f1",
      "groupName": undefined,
      "message": "msg",
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getInfo": [Function],
  "getInfoByGroup": [Function],
  "getMessage": [Function],
  "getSuccesses": [Function],
  "getSuccessesByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasInfo": [Function],
  "hasInfoByGroup": [Function],
  "hasSuccesses": [Function],
  "hasSuccessesByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "info": [],
  "infoCount": 0,
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "pendingCount": 0,
  "successCount": 0,
  "successes": [],
  "testCount": 1,
  "tests": {
    "f1": SummaryBase {
      "errorCount": 1,
      "errors": [
        "msg",
      ],
      "info": [],
      "infoCount": 0,
      "pendingCount": 0,
      "successCount": 0,
      "successes": [],
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`skipWhen > should pass the current result draft to the functional condition 3`] = `
{
  "errorCount": 2,
  "errors": [
    SummaryFailure {
      "fieldName": "f1",
      "groupName": undefined,
      "message": "msg",
    },
    SummaryFailure {
      "fieldName": "f2",
      "groupName": undefined,
      "message": "msg",
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getInfo": [Function],
  "getInfoByGroup": [Function],
  "getMessage": [Function],
  "getSuccesses": [Function],
  "getSuccessesByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasInfo": [Function],
  "hasInfoByGroup": [Function],
  "hasSuccesses": [Function],
  "hasSuccessesByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "info": [],
  "infoCount": 0,
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "pendingCount": 0,
  "successCount": 0,
  "successes": [],
  "testCount": 2,
  "tests": {
    "f1": SummaryBase {
      "errorCount": 1,
      "errors": [
        "msg",
      ],
      "info": [],
      "infoCount": 0,
      "pendingCount": 0,
      "successCount": 0,
      "successes": [],
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f2": SummaryBase {
      "errorCount": 1,
      "errors": [
        "msg",
      ],
      "info": [],
      "infoCount": 0,
      "pendingCount": 0,
      "successCount": 0,
      "successes": [],
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;
